Refactory: Edit name

--- a/GAN/GAN.ipynb
+++ b/GAN/GAN.ipynb
@@ -93,25 +93,26 @@
     "    def __init__(self, params):\n",
     "        super().__init__()\n",
     "        self.num_classes = params['num_classes']\n",
-    "        self.noise = params['noise']\n",
+    "        self.latent_dim = params['noise']\n",
     "        self.input_size = params['input_size']\n",
     "\n",
     "        self.model = nn.Sequential(\n",
-    "            *self._fc_layer(self.noise, 128, normalize=False),\n",
-    "            *self._fc_layer(128,256),\n",
-    "            *self._fc_layer(256,512),\n",
-    "            *self._fc_layer(512,1024),\n",
+    "            *self.block(self.latent_dim, 128, normalize=False),\n",
+    "            *self.block(128,256),\n",
+    "            *self.block(256,512),\n",
+    "            *self.block(512,1024),\n",
     "            nn.Linear(1024,int(np.prod(self.input_size))),\n",
     "            nn.Tanh()\n",
     "        )\n",
     "        \n",
-    "    def _fc_layer(self, in_channels, out_channels, normalize=True):\n",
+    "    def block(self, in_channels, out_channels, normalize=True):\n",
     "        layers = []\n",
     "        layers.append(nn.Linear(in_channels, out_channels)) # fc layer\n",
     "        if normalize:\n",
-    "            layers.append(nn.BatchNorm1d(out_channels, 0.8)) # BN\n",
+    "            layers.append(nn.BatchNorm1d(out_channels, 0.8)) # Batch Normalization\n",
     "        layers.append(nn.LeakyReLU(0.2)) # LeakyReLU\n",
     "        return layers\n",
+    "\n",
     "\n",
     "    def forward(self, z):\n",
     "        img = self.model(z)\n",
