Refactor: Fix name

--- a/GAN/GAN.ipynb
+++ b/GAN/GAN.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "params = {\n",
     "    'num_classes': 10,\n",
-    "    'noise': 100,\n",
+    "    'latent_space': 100,\n",
     "    'input_size': (1,28,28),\n",
     "    'lr': 2e-4,\n",
     "    'b1': 0.5,\n",
@@ -93,7 +93,7 @@
     "    def __init__(self, params):\n",
     "        super().__init__()\n",
     "        self.num_classes = params['num_classes']\n",
-    "        self.latent_dim = params['noise']\n",
+    "        self.latent_dim = params['latent_space']\n",
     "        self.input_size = params['input_size']\n",
     "\n",
     "        self.model = nn.Sequential(\n",
@@ -114,8 +114,8 @@
     "        return layers\n",
     "\n",
     "\n",
-    "    def forward(self, z):\n",
-    "        img = self.model(z)\n",
+    "    def forward(self, noise):\n",
+    "        img = self.model(noise)\n",
     "        img = img.view(img.size(0), *self.input_size)\n",
     "        return img"
    ]
@@ -140,9 +140,9 @@
     "            nn.Sigmoid()\n",
     "        )\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        x = x.view(x.size(0),-1)\n",
-    "        validity = self.model(x)\n",
+    "    def forward(self, img):\n",
+    "        img = img.view(img.size(0),-1)\n",
+    "        validity = self.model(img)\n",
     "        return validity"
    ]
   },
