Docs: Edit Readme

--- a/GAN/GAN.ipynb
+++ b/GAN/GAN.ipynb
@@ -194,7 +194,7 @@
     "        optimizer_G.zero_grad()\n",
     "\n",
     "        # Sample noise as Generator input\n",
-    "        z = torch.randn(imgs.size(0), params['noise'], device=device) \n",
+    "        z = torch.randn(imgs.size(0), params['latent_space'], device=device) \n",
     "        \n",
     "        # Generate a batch of images\n",
     "        gen_imgs = generator(z) \n",
