--- a/CGAN/CGAN.ipynb
+++ b/CGAN/CGAN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code is based on https://github.com/eriklindernoren/PyTorch-GAN/blob/master/implementations/gan/gan.py"
+    "This code is based on https://github.com/eriklindernoren/PyTorch-GAN/blob/master/implementations/cgan/cgan.py"
    ]
   },
   {
@@ -51,12 +51,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "params = {\n",
+    "    'num_classes': 10,\n",
+    "    'latent_space': 100,\n",
+    "    'input_size': (1,28,28),\n",
+    "    'lr': 2e-4,\n",
+    "    'b1': 0.5,\n",
+    "    'b2': 0.999,\n",
+    "    'epochs': 100,\n",
+    "    'batch_size': 64,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.5],[0.5]),\n",
     "    ])\n",
     "train_dataset = datasets.MNIST(data_dir, train=True, transform=train_transform, download=True)\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=64, shuffle=True)"
+    "train_dataloader = DataLoader(train_dataset, params['batch_size'], shuffle=True)"
    ]
   },
   {
@@ -72,49 +90,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    'num_classes': 10,\n",
-    "    'noise': 100,\n",
-    "    'input_size': (1,28,28),\n",
-    "    'lr': 2e-4,\n",
-    "    'b1': 0.5,\n",
-    "    'b2': 0.999,\n",
-    "    'epochs': 100,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class Generator(nn.Module):\n",
     "    def __init__(self, params):\n",
     "        super().__init__()\n",
     "        self.num_classes = params['num_classes']\n",
-    "        self.noise = params['noise']\n",
+    "        self.latent_dim = params['latent_space']\n",
     "        self.input_size = params['input_size']\n",
     "\n",
+    "        # Label embedding matrix\n",
+    "        self.label_emb = nn.Embedding(self.num_classes, self.num_classes)\n",
+    "\n",
     "        self.model = nn.Sequential(\n",
-    "            *self._fc_layer(self.noise, 128, normalize=False),\n",
-    "            *self._fc_layer(128,256),\n",
-    "            *self._fc_layer(256,512),\n",
-    "            *self._fc_layer(512,1024),\n",
-    "            nn.Linear(1024,int(np.prod(self.input_size))),\n",
+    "            *self.block(self.latent_dim + self.num_classes, 128, normalize=False),\n",
+    "            *self.block(128,256),\n",
+    "            *self.block(256,512),\n",
+    "            *self.block(512,1024),\n",
+    "            nn.Linear(1024, int(np.prod(self.input_size))),\n",
     "            nn.Tanh()\n",
     "        )\n",
     "        \n",
-    "    def _fc_layer(self, in_channels, out_channels, normalize=True):\n",
+    "    def block(self, in_channels, out_channels, normalize=True):\n",
     "        layers = []\n",
     "        layers.append(nn.Linear(in_channels, out_channels)) # fc layer\n",
     "        if normalize:\n",
-    "            layers.append(nn.BatchNorm1d(out_channels, 0.8)) # BN\n",
+    "            layers.append(nn.BatchNorm1d(out_channels, 0.8)) # Batch Normalization\n",
     "        layers.append(nn.LeakyReLU(0.2)) # LeakyReLU\n",
     "        return layers\n",
     "\n",
-    "    def forward(self, z):\n",
-    "        img = self.model(z)\n",
+    "    def forward(self, noise, labels):\n",
+    "        # Concatenate label embedding and image to produce input\n",
+    "        gen_input = torch.cat((self.label_emb(labels), noise), -1)\n",
+    "        img = self.model(gen_input)\n",
     "        img = img.view(img.size(0), *self.input_size)\n",
     "        return img"
    ]
@@ -128,20 +134,28 @@
     "class Discriminator(nn.Module):\n",
     "    def __init__(self,params):\n",
     "        super().__init__()\n",
+    "        self.num_classes = params['num_classes']\n",
     "        self.input_size = params['input_size']\n",
     "\n",
+    "        # Label embedding matrix\n",
+    "        self.label_emb = nn.Embedding(self.num_classes, self.num_classes)\n",
+    "\n",
     "        self.model = nn.Sequential(\n",
-    "            nn.Linear(int(np.prod(self.input_size)), 512),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(512,256),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(256,1),\n",
-    "            nn.Sigmoid()\n",
+    "            nn.Linear(self.num_classes + int(np.prod(self.input_size)), 512),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.Dropout(0.4),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.Dropout(0.4),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            nn.Linear(512, 1),\n",
     "        )\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        x = x.view(x.size(0),-1)\n",
-    "        validity = self.model(x)\n",
+    "    def forward(self, img, labels):\n",
+    "        # Concatenate label embedding and image to produce input\n",
+    "        dis_input = torch.cat((img.view(img.size(0), -1), self.label_emb(labels)), -1)\n",
+    "        validity = self.model(dis_input)\n",
     "        return validity"
    ]
   },
@@ -159,7 +173,7 @@
    "outputs": [],
    "source": [
     "# Loss function\n",
-    "adversarial_loss = torch.nn.BCELoss()\n",
+    "adversarial_loss = torch.nn.MSELoss()\n",
     "\n",
     "# Initialize generator and discriminator\n",
     "generator = Generator(params)\n",
@@ -176,16 +190,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sample_image(n_row, batches_done):\n",
+    "    \"\"\"Saves a grid of generated digits ranging from 0 to n_classes\"\"\"\n",
+    "    # Sample noise\n",
+    "    z = torch.randn(n_row ** 2, params['latent_space']).to(device)\n",
+    "    # Get labels ranging from 0 to n_classes for n rows\n",
+    "    labels = np.array([num for _ in range(n_row) for num in range(n_row)])\n",
+    "    labels = torch.tensor(labels)\n",
+    "    gen_imgs = generator(z, labels)\n",
+    "    save_image(gen_imgs.data, \"images/%d.png\" % batches_done, nrow=n_row, normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batch_count = 0\n",
     "\n",
     "for epoch in tqdm(range(params['epochs'])):\n",
-    "    for i, (imgs, _) in enumerate(train_dataloader):\n",
+    "    for i, (imgs, labels) in enumerate(train_dataloader):\n",
     "        \n",
     "        # Adversarial ground truths\n",
     "        valid = torch.Tensor(imgs.size(0), 1).fill_(1.0).to(device)\n",
     "        fake = torch.Tensor(imgs.size(0), 1).fill_(0.0).to(device)\n",
     "\n",
     "        real_imgs = imgs.to(device)\n",
+    "        real_labels = labels.to(device)\n",
     "\n",
     "        #-----------------\n",
     "        # Train Generator \n",
@@ -193,13 +225,15 @@
     "        optimizer_G.zero_grad()\n",
     "\n",
     "        # Sample noise as Generator input\n",
-    "        z = torch.randn(imgs.size(0), params['noise'], device=device) \n",
+    "        z = torch.randn(imgs.size(0), params['latent_space']).to(device)\n",
+    "        gen_labels = torch.randint(0, params['num_classes'], (imgs.size(0),)).to(device)\n",
     "        \n",
     "        # Generate a batch of images\n",
-    "        gen_imgs = generator(z) \n",
+    "        gen_imgs = generator(z, gen_labels) \n",
     "\n",
     "        # Loss measure Generator's ability to fool the discriminator\n",
-    "        g_loss = adversarial_loss(discriminator(gen_imgs), valid) \n",
+    "        validity = discriminator(gen_imgs, gen_labels)\n",
+    "        g_loss = adversarial_loss(validity, valid) \n",
     "        \n",
     "        g_loss.backward()\n",
     "        optimizer_G.step()\n",
@@ -211,8 +245,8 @@
     "        optimizer_D.zero_grad()\n",
     "\n",
     "        # Measure discriminator's ability to classify real from generated samples\n",
-    "        real_loss = adversarial_loss(discriminator(real_imgs), valid)\n",
-    "        fake_loss = adversarial_loss(discriminator(gen_imgs.detach()), fake)\n",
+    "        real_loss = adversarial_loss(discriminator(real_imgs, real_labels), valid)\n",
+    "        fake_loss = adversarial_loss(discriminator(gen_imgs.detach(), labels), fake)\n",
     "        d_loss = (real_loss + fake_loss) / 2\n",
     "\n",
     "        d_loss.backward()\n",
@@ -225,7 +259,7 @@
     "                \"[Epoch %d/%d] [D loss: %f] [G loss: %f]\"\n",
     "                % (epoch, params['epochs'], d_loss.item(), g_loss.item())\n",
     "            )\n",
-    "            save_image(gen_imgs.data[:25], \"images/%d.png\" % batches_done, nrow=5, normalize=True)"
+    "            sample_image(n_row=10, batches_done=batches_done)"
    ]
   }
  ],
